[TuanDN] Add part
