# api/models/size.model.js
@@ -10,12 +10,6 @@ const sizeSchema = new mongoose.Schema(
             type: Number,
             required: true
         },
-        rawPart: {
-            type: Number,
-        },
-        finishingPart: {
-            type: Number,
-        },
         image: {
             type: String,
             required: true,
